--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,7 @@
  * 1. Correct the line height in all browsers.
  * 2. Prevent adjustments of font size after orientation changes in iOS.
  */
+@import url("https://fonts.googleapis.com/css?family=Roboto:500&display=swap&subset=latin-ext");
 html {
   line-height: 1.15;
   /* 1 */
@@ -309,14 +310,85 @@ template {
 
 html {
   -webkit-box-sizing: border-box;
-          box-sizing: border-box; }
+          box-sizing: border-box;
+  background: #3767AD; }
 
 *, *:before, *:after {
   -webkit-box-sizing: inherit;
           box-sizing: inherit; }
 
 body {
-  color: #F9C802;
-  background: #000; }
+  color: #fff;
+  background: #3767AD;
+  font-family: Roboto;
+  font-weight: 500;
+  min-height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 16px; }
+
+.button-add {
+  padding: 12px;
+  font-size: 18px;
+  color: #000;
+  border: none;
+  border-radius: 4px;
+  background: #fff;
+  min-width: 216px;
+  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  margin: 48px 0 26px; }
+
+.button-remove {
+  background: none;
+  border: none;
+  min-width: 216px;
+  padding: 12px;
+  font-size: 14px;
+  color: #F5E5E7; }
+
+.counter {
+  height: 280px;
+  width: 280px;
+  background: url("../assets/img/water-glass.svg") center center;
+  background-size: contain;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  font-size: 112px;
+  color: #000; }
+  .counter__value {
+    display: block;
+    padding-top: 64px; }
+
+.heading {
+  font-size: 55px;
+  margin: 0 0 64px 0;
+  padding: 0; }
+
+.main {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center; }
 
 /*# sourceMappingURL=main.css.map */
